--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -63,10 +64,19 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.compose.material:material-icons-extended'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose'
+    implementation 'androidx.compose.runtime:runtime-livedata'
+    implementation 'androidx.compose.material:material'
+    implementation "androidx.navigation:navigation-compose:2.7.2"
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation "androidx.paging:paging-compose:3.2.1"
 
-    implementation 'com.airbnb.android:mavericks:3.0.7'
-    implementation 'com.airbnb.android:mavericks-navigation:3.0.7'
-    implementation "io.insert-koin:koin-androidx-compose:3.5.0"
+    implementation "com.google.dagger:hilt-android:2.47"
+    kapt "com.google.dagger:hilt-compiler:2.46.1"
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
     implementation "com.github.bumptech.glide:compose:1.0.0-alpha.5"
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
