feat: adding cache support with room on pokemon detail

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,9 +84,11 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$okhttp3_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.google.code.gson:gson:2.10"
 
     implementation "androidx.paging:paging-compose:3.2.1"
     implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
     debugImplementation "com.jakewharton.timber:timber:5.0.1"
